@@ -14,7 +14,7 @@ or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public
 License for more details.
 
 You should have received a copy of the GNU General Public License
-along with Brigw.  If not, see <https://www.gnu.org/licenses/>.  */
+along with Brogw.  If not, see <https://www.gnu.org/licenses/>.  */
 
 
 #ifndef BROGW_BROGW_CONFIG_H
